--- a/app/views/shared/sidebar/_style_colors.html.erb
+++ b/app/views/shared/sidebar/_style_colors.html.erb
@@ -1,3 +1,14 @@
 <div class="style-options-content colors">
-
+  <div class="font-color-wrapper">
+    <h3>Top bar</h3>
+    <div class="font-color-picker">
+      <input type="color" class="basic-color-picker" id="top-bar-color">
+    </div>
+  </div>
+  <div class="font-color-wrapper">
+    <h3>Highlight</h3>
+    <div class="font-color-picker">
+      <input type="color" class="basic-color-picker" id="highlight-color">
+    </div>
+  </div>
 </div>
