--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -15,12 +15,22 @@
 }
 
 .widget-nav-btn {
-    padding-right: 12px;
+    height: 100%;
+    width: 80px;
+    margin-right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     i {
         color: white;
         font-size: 50px;
         text-shadow: 0 0 3px rgba(241, 249, 212, 0.6);
     }
+}
+
+.widget-nav-btn.active {
+    background: linear-gradient(0deg, #11101D 30%, #20EFE3 90%);
+    border-bottom: 10px solid #20EFE3;
 }
 
 .content-dev {
