--- a/app/views/widgets/edit.html.erb
+++ b/app/views/widgets/edit.html.erb
@@ -2,7 +2,7 @@
     <div class="left-column-sidebar">
         <%= render  "shared/sidebar" %>
     </div>
-    <div class="right-column-content">
+    <div class="right-column-content show-view">
         <%= render 'shared/widgetbox' %>
     </div>        
 </div>
