--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -2,8 +2,8 @@
   <div class="left-column-sidebar">
     <%= render  "shared/sidebar" %>
   </div>
-  <div class="right-column-content">
-    <%= render "my_products" %>
+  <div class="right-column-content show-view">
+    <%= render "products_index" %>
     <%= render 'shared/widgetbox' %>
   </div>
 </div>
