prepared the add product form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,8 @@
 @import "components/index";
 @import "components/searchbar";
 @import "components/card";
+@import "components/add_button";
+@import "components/form-container";
 @import "pages/index";
 @import "widgets/index";
 
