--- a/app/views/widgets/index.html.erb
+++ b/app/views/widgets/index.html.erb
@@ -38,5 +38,7 @@
      </div>
     </div>
   </div>
-
+  <%= link_to new_widget_url do %>
+  <i class="fas fa-plus-circle fa-10x fixed"></i>
+<% end %>
 </div>
