--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "components/card";
 @import "components/add_button";
 @import "components/form-container";
+@import "components/button";
 @import "pages/index";
 @import "widgets/index";
 
