--- a/app/assets/stylesheets/components/_form-container.scss
+++ b/app/assets/stylesheets/components/_form-container.scss
@@ -2,12 +2,7 @@
   
   width: 30%;
   margin-top: 10%;
+  font-family: "Nunito", "Helvetica", "sans-serif";
 }
 
 
-textarea:focus,
-.uneditable-input:focus {
-  border-color: rgba(126, 239, 104, 0.8);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(126, 239, 104, 0.6);
-  outline: 0 none;
-}
