--- a/app/assets/stylesheets/components/_codebox.scss
+++ b/app/assets/stylesheets/components/_codebox.scss
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: flex-start;
     width: 80%;
-    height: 200px;
-    margin: 20% auto;
+    // height: 200px;
+    margin: 3% auto;
 }
 
 .generate-dev-box {
