--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -519,6 +519,10 @@
   display: none;
 }
 
+.style-options-content.colors .font-color-wrapper {
+  margin-bottom: 24px;
+}
+
 .style-options-content.active {
   display: block;
 }
