--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -1,5 +1,6 @@
 .widget-dev {
-    width: 500px;
+    width: 460px;
+    height: 600px;
     border-radius: 12px;
     box-shadow: 0 0 10px 3px rgb(187, 185, 185);
     .topbar-dev {
@@ -11,11 +12,28 @@
         justify-content: flex-end;
         align-items: center;
     }
-    // .widget-content-dev {
-    //     // display: flex;
-    //     // justify-content: space-between;
-    //     // height: 80%;
-    // }
+    .widget-content-dev {
+        height: calc(100% - 100px);
+    }
+}
+
+.widget-content-dev form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 24px 0;
+}
+
+.widget-content-dev .preview-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 24px;
+}
+
+.widget-content-dev .edit-content {
+    height: 100%;
 }
 
 .widget-nav-btn {
@@ -38,6 +56,7 @@
 }
 
 .content-dev {
+    overflow-y: auto;
     max-width: 80%;
     margin: 30px auto;
     flex-grow: 1;
@@ -83,7 +102,6 @@
 }
 
 .submit-dev {
-    height: 120px;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
@@ -121,6 +139,7 @@
 
 .add-input-dev {
     width: 90%;
+    margin-bottom: 20px;
     display: flex;
     justify-content: flex-end;
     .plus-box {
