--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,11 @@
-<h1>Pages#home</h1>
-<div class="container background">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/994197/pexels-photo-994197.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
+  <div class="container">
+    <h1>Bring <strong>Social Proofing</strong> to your website</h1>
+    <p>centralize and display verified reviews from all around the internet and boost your E-rep </p>
+  <%= link_to "Start now", widgets_path, class: "btn btn-primary" %>
+  </div>
+</div><div
+ class="container background">
   <i class="bx bxs-widget fa-10x coloring"><h1 class="logo-name">Aprooft</h1></i>
 
 </div>
