--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -267,7 +267,7 @@
   width: 0;
   height: 0;
   left: 170px;
-  transition: width 0s ease 0.5s, height 0s ease 0.5s, opacity 0.5s ease 0.05s;
+  transition: width 0s ease 0.5s, height 0s ease 0.5s, opacity 0.5s ease;
   overflow: hidden;
   opacity: 0;
   display: block;
