--- a/app/views/widgets/_products_index.html.erb
+++ b/app/views/widgets/_products_index.html.erb
@@ -28,12 +28,12 @@
      </div>
     </div>
      <% end %>
-     <div class="product-card fade-in">
+     <%# <div class="product-card fade-in">
       <img src="https://i.ibb.co/W2507vM/kisspng-plus-and-minus-signs-computer-icons-clip-art-plus-sign-5aaad857361cb2-9687832115211459432217.png" alt="" style="object-fit: contain; margin-top: 23px;">
       <div class="product-card-info">
        <h2> Add a product</h2>
       </div>
-     </div>
+     </div> %>
    </div>
     <%= link_to new_widget_url do %>
     <i class="fas fa-plus-circle fa-10x fixed"></i>
