--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -6,7 +6,7 @@
     .topbar-dev {
         width: 100%;
         height:100px;
-        background-color: #11101D;
+        background-color: var(--widget-topbar-color);
         border-radius: 8px 8px 0 0;
         display: flex;
         justify-content: flex-end;
@@ -51,8 +51,8 @@
 }
 
 .widget-nav-btn.active {
-    background: linear-gradient(0deg, #11101D 30%, #20EFE3 90%);
-    border-bottom: 10px solid #20EFE3;
+    background: linear-gradient(0deg, var(--widget-topbar-color) 30%, var(--widget-highlight-color) 90%);
+    border-bottom: 10px solid var(--widget-highlight-color);
 }
 
 .content-dev {
