--- a/app/views/widgets/_products_index.html.erb
+++ b/app/views/widgets/_products_index.html.erb
@@ -14,29 +14,25 @@
     </div>
   </div>
   <div class="your-products-wrapper">
-     <h1> Your products</h1>
-   <div class="widgets-all-list">
-    <% @widgets.where(user_id: current_user.id).each do |product| %>
-    <div class="product-card fade-in">
-      <% if product.product_pic.present?%>
-      <%= cl_image_tag product.product_pic.key  %>
-      <% else %>
-     <img src="https://images.unsplash.com/photo-1546435770-a3e426bf472b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2846&q=80" alt="">
+    <h1> Your products</h1>
+    <div class="widgets-all-list">
+      <% @widgets.where(user_id: current_user.id).each do |product| %>
+        <%= link_to edit_widget_path(product[:id]) do %>
+          <div class="product-card fade-in">
+            <% if product.product_pic.present?%>
+              <%= cl_image_tag product.product_pic.key  %>
+            <% else %>
+              <img src="https://images.unsplash.com/photo-1546435770-a3e426bf472b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2846&q=80" alt="">
+            <% end %>
+            <div class="product-card-info">
+              <h2> <%= product.product_title %> </h2>
+            </div>
+          </div>
+        <% end %>
       <% end %>
-     <div class="product-card-info">
-      <h2> <%= product.product_title %> </h2>
-     </div>
-    </div>
-     <% end %>
-     <%# <div class="product-card fade-in">
-      <img src="https://i.ibb.co/W2507vM/kisspng-plus-and-minus-signs-computer-icons-clip-art-plus-sign-5aaad857361cb2-9687832115211459432217.png" alt="" style="object-fit: contain; margin-top: 23px;">
-      <div class="product-card-info">
-       <h2> Add a product</h2>
-      </div>
-     </div> %>
    </div>
     <%= link_to new_widget_url do %>
-    <i class="fas fa-plus-circle fa-10x fixed"></i>
+      <i class="fas fa-plus-circle fa-10x fixed"></i>
     <% end %>
   </div>
 </div>
