--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,10 +17,7 @@
   width: 100%;
   min-height: 100px;
   flex-grow: 1;
-  object-fit: cover;
-  /*customizable*/
-  object-position: 50% 50%;
-  border-radius: 4px 4px 0 0;
+  object-fit: scale-down;
 }
 
 .product-card-info {
