--- a/app/assets/stylesheets/components/_loading.scss
+++ b/app/assets/stylesheets/components/_loading.scss
@@ -3,8 +3,8 @@
     justify-content: center;
     margin-top: 180px;
     i {
-        font-size: 120px;
-        color: #20EFE3;
+        font-size: 80px;
+        color: #9da0a0;
         opacity: 0.6;
     }
 }
