--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -11,3 +11,25 @@
     justify-content: center;
     align-items: center;
 }
+
+.widget-box {
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+    width: 0px;
+    height: 0px;
+    overflow: hidden;
+    transition: width 0.4s ease, height 0.4s ease;
+}
+
+.widget-box.active {
+    height: 70vh;
+    width: 50vw;
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+    height: 70vh;
+    width: 50vw;
+    border: solid 1px grey;  
+    transition: width 0.5s ease, height 0.5s ease;
+}
