--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -1,20 +1,25 @@
 .widget-dev {
-    width: 460px;
-    height: 600px;
     border-radius: 12px;
-    box-shadow: 0 0 10px 3px rgb(187, 185, 185);
-    .topbar-dev {
-        width: 100%;
-        height:100px;
-        background-color: var(--widget-topbar-color);
-        border-radius: 8px 8px 0 0;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-    }
-    .widget-content-dev {
-        height: calc(100% - 100px);
-    }
+    flex-grow: 1;
+    height: 600px;
+
+    // TODO
+    // use global css variable replace the white color, connect with sidebar styling.
+    background-color: white;
+}
+
+.topbar-dev {
+    width: 100%;
+    height:100px;
+    background-color: var(--widget-topbar-color);
+    border-radius: 8px 8px 0 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.widget-content-dev {
+    height: calc(100% - 100px);
 }
 
 .widget-content-dev form {
