--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -27,20 +27,13 @@
     position: fixed;
     bottom: 100px;
     right: 100px;
-    // TODO
-    // use global css variable replace the white color, connect with sidebar styling.
-    width: 460px;
-    height: 600px;
-
-    // TODO
-    // use global css variable replace the white color, connect with sidebar styling.
-    background-color: white;
+    width: var(--widget-width);
+    height: var(--widget-height);
+    background-color: var(--widget-background-color);
     transition: width 0.5s ease, height 0.5s ease;
 }
 
 .edit-widget-wrapper {
-    // TODO
-    // use global css variable replace the white color, connect with sidebar styling.
-    width: 460px;
-    height: 600px;
+    width: var(--widget-width);
+    height: var(--widget-height);
 }
