--- a/app/views/widgets/_products_index.html.erb
+++ b/app/views/widgets/_products_index.html.erb
@@ -18,7 +18,7 @@
     <div class="widgets-all-list">
       <% @widgets.where(user_id: current_user.id).each do |product| %>
         <%= link_to edit_widget_path(product[:id]) do %>
-          <div class="product-card fade-in">
+          <div class="product-card position-relative fade-in">
             <% if product.product_pic.present?%>
               <%= cl_image_tag product.product_pic.key  %>
             <% else %>
@@ -26,10 +26,11 @@
             <% end %>
             <div class="product-card-info">
               <h2> <%= product.product_title %> </h2>
-                             <button type="button" class="btn btn-primary"><%= link_to "Remove",
-                    widget_path(product),
-                    method: :delete,
-                    data: { confirm: "Are you sure?" } %></button>
+                <%= link_to widget_path(product),
+                method: :delete,
+                data: { confirm: "Are you sure?" }  do %>
+                <i class="fas fa-trash-alt fa-2x trash-button"></i>
+                <% end %>
             </div>
           </div>
         <% end %>
