--- a/app/assets/stylesheets/components/_video_card_list.scss
+++ b/app/assets/stylesheets/components/_video_card_list.scss
@@ -9,6 +9,7 @@
     flex-basis: 0%;
     align-items: center;
     margin-bottom: 15px;
+    border-radius: 5px;
     .video-card-list-thumbnail {
         align-items: center;
         flex-direction: row;
