--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -31,6 +31,7 @@
     height: var(--widget-height);
     background-color: var(--widget-background-color);
     transition: width 0.5s ease, height 0.5s ease;
+    border-radius: 12px;
 }
 
 .edit-widget-wrapper {
