--- a/app/views/widgets/edit.html.erb
+++ b/app/views/widgets/edit.html.erb
@@ -3,6 +3,8 @@
         <%= render  "shared/sidebar" %>
     </div>
     <div class="right-column-content show-view">
+        <a class="btn btn-primary margin-button" href="/widgets">Back to product list</a>
         <%= render 'shared/widgetbox' %>
     </div>
+    <input type="button" class="submit-dev-btn" value="Preview">
 </div>
