grid styles base

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,5 +4,6 @@
 @import "navbar";
 @import "sidebar";
 @import "video_card_list";
+@import "video_card_grid";
 @import "loading";
 @import "widget";
