--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -18,3 +18,35 @@
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+
+
+.text-box {
+  background-image: url(https://i.ibb.co/rFzgLnw/aprooft-background.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 1075px;
+
+}
+
+.text-box2 {
+  background-image: url(https://i.ibb.co/18sx1yX/Take-a-Survey.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 614px;
+  left: 363px;
+  top: -455px;
+
+}
+.img-width {
+
+  width: 70%;
+}
+
+.subtext1 {
+
+    top: 525px;
+    width: 390px;
+    margin-left: 44px;
+}
