--- a/app/assets/stylesheets/components/_video_card_grid.scss
+++ b/app/assets/stylesheets/components/_video_card_grid.scss
@@ -59,13 +59,17 @@
 }
 
 .grid-info-playicon {
-  // color: #FF0000;
   color: white;
   opacity: 0.87;
   font-size: 48px;
   position: absolute;
-  top: 20%;
-  left: 37%;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .grid-info-number {
@@ -90,4 +94,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   line-height: 1.2;
+  font-size: var(--widget-font-size);
+  font-family: var(--widget-font-family);
+  color: var(--widget-text-color);
 }
