--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,25 +1,43 @@
-<body class="background">
-<div class="container">
+<div class="background">
+<div class="homepage-container">
 
   <i class="bx bxs-widget fa-10x coloring"></i>
   <h1 class="logo-name coloring">Aprooft</h1>
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/994197/pexels-photo-994197.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
+<div class="banner" data-aos="fade-up" data-aos-duration="500" data-aos-once="false" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/994197/pexels-photo-994197.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
   <div class="container">
     <h1>Bring <strong>Social Proofing</strong> to your website</h1>
     <h2 style="color: white;">centralize and display verified reviews from all around the internet and boost your E-rep </h2>
   <%= link_to "Start now", widgets_path, class: "btn btn-primary" %>
   </div>
 </div>
-  <div class="position-relative text-box">
-   <div class="position-absolute subtext1">
-     <h1 style="color: #11101D;">Lorem ipsum, dolor sit, amet consectetur adipisicing elit.</h1>
+  <div class="position-relative text-boxleft" data-aos="fade-right" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
+   <div class="position-absolute subtextleft">
+     <h1 style="color: #11101D;">Get verified reviews from the internet to promote your products</h1>
    </div>
 </div>
    <div class="position-relative">
-    <div class="text-box2 position-absolute">
+    <div class="img-boxright position-absolute" data-aos="fade-left" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
     </div>
    </div>
+     <div class="position-relative text-boxright">
+   <div class="position-absolute subtextright">
+     <h1 style="color: #11101D;">A highly customizable interface to match your website</h1>
+   </div>
+</div>
+   <div class="position-relative">
+    <div class="img-box2 position-absolute">
+    </div>
+   </div>
+     <div class="position-relative text-boxleft2">
+   <div class="position-absolute subtextleft2">
+     <h1 style="color: #11101D;">Know your customers habits better thanks too analytics</h1>
+   </div>
+</div>
+<div class="position-relative">
+    <div class="img-boxright2 position-absolute">
+    </div>
+</div>
 </div>
 
-</body>
+</div>
