--- a/app/assets/stylesheets/components/_video_card_list.scss
+++ b/app/assets/stylesheets/components/_video_card_list.scss
@@ -49,11 +49,11 @@
 
 .list-info-playicon {
     color: #fff;  
-    opacity: 0.87;
     position: absolute;
-    left: 39%;
-    top: 21%;
-    font-size: 40px;
+    left: 35%;
+    top: 18%;
+    // opacity: 0.8;
+    // font-size: 40px;
     // transform: translate(-50%,-50%);
 }
 
