--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -154,8 +154,7 @@
         height: 38px;
         width: 38px;
         border-radius: 50%;
-        background-color: #20EFE3;
-        box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+        color: #6d7889;
         transition: 0.3s ease;
     }
     .plus-box i {
@@ -164,10 +163,9 @@
 }
 
 .plus-box:hover {
-    cursor: pointer;
-    background-color: black;
-    i {
-        color: #20EFE3;
+    cursor: pointer;    
+    svg {
+        color: black;
     }
 }
 
