--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -19,3 +19,20 @@
 .margin-button {
   margin-bottom: 23px;
 }
+
+.close-icon {
+  position: relative;
+  top: -95px;
+  color: #e2ebf1;
+  font-size: 20px;
+  left: 9px;
+  cursor: pointer;
+}
+
+.go-back {
+  display: flex;
+  justify-content: flex-end;
+  padding-bottom: 100px;
+  cursor: pointer;
+  color: grey;
+}
