save reddit url to db

--- a/app/assets/stylesheets/components/_video_card_list.scss
+++ b/app/assets/stylesheets/components/_video_card_list.scss
@@ -10,6 +10,7 @@
     align-items: center;
     margin-bottom: 15px;
     border-radius: 5px;
+    cursor: pointer;
     .video-card-list-thumbnail {
         align-items: center;
         flex-direction: row;
