--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -19,6 +19,7 @@
     width: 0px;
     height: 0px;
     overflow: hidden;
+    box-shadow: 0px 0px 2px grey;
     transition: width 0.4s ease, height 0.4s ease;
 }
 
