change highlight and button color

--- a/app/assets/stylesheets/config/_widget_variables.scss
+++ b/app/assets/stylesheets/config/_widget_variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --widget-highlight-color: #20EFE3;
+    --widget-highlight-color: #3a84de;
     --widget-topbar-color: #11101D;
     --widget-font-family: sans-serif;
     --widget-font-size: 16px;
