replaced all the fontawesome on youtube layouts view

--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -61,7 +61,7 @@
 
 .content-dev {
     overflow-y: auto;
-    max-width: 85%;
+    width: 88%;
     margin: 30px auto;
     flex-grow: 1;
     height: 380px;
