--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,12 +21,21 @@
 }
 
 .background {
-
   background-color: #11101D;
 }
 
 .coloring {
+  color: white;
+}
 
-color: white;
-
+.your-products-title {
+  display: flex;
+  justify-content: space-between;
+  img {
+    width: 45px;
+    height: 45px;
+    background-color : #3a84de;
+    border-radius: 50%;
+    padding: 7px;
+  }
 }
