change back button on widgets new page

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -36,3 +36,9 @@
   cursor: pointer;
   color: grey;
 }
+
+.back-on-widgets-new {
+  background-color: black;
+  border-radius: 50%;
+  margin-bottom: 30px;
+}
