--- a/app/views/widgets/new.html.erb
+++ b/app/views/widgets/new.html.erb
@@ -1,5 +1,7 @@
 <div class="container form-container">
-  <%= link_to "Back to product list", widgets_path, class: "btn btn-primary margin-button" %>
+  <%= link_to widgets_path do %>
+    <img class="back-on-widgets-new" src="https://img.icons8.com/pastel-glyph/38/ffffff/back.png"/>
+  <% end %>
   <%= simple_form_for(@widget) do |f| %>
    <%= f.input :product_title, :label => "Product title" %>
    <%= f.input :product_id, :label => "Product ID" %>
