--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -11,7 +11,7 @@
     background-color: var(--widget-topbar-color);
     border-radius: 8px 8px 0 0;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -41,16 +41,16 @@
 .widget-nav-btn {
     height: 100%;
     width: 80px;
-    margin-right: 24px;
+    margin-left: 56px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    i {
-        color: white;
-        font-size: 50px;
-        text-shadow: 0 0 3px rgba(241, 249, 212, 0.6);
-    }
+    // i {
+    //     color: white;
+    //     font-size: 50px;
+    //     text-shadow: 0 0 3px rgba(241, 249, 212, 0.6);
+    // }
 }
 
 .widget-nav-btn.active {
