--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -263,22 +263,23 @@
 
 .style-options-wrapper {
   position: absolute;
-  padding: 130px 0;
+  // padding: 130px 0;
   width: 0;
   height: 0;
   left: 170px;
   transition: width 0s ease 0.5s, height 0s ease 0.5s, opacity 0.5s ease;
   overflow: hidden;
   opacity: 0;
-  display: block;
+  // display: block;
 }
 
 
 .style-options-wrapper.active {
   opacity: 0.85;
   width: 400px;
-  height: 100%;
+  height: 475px;
   transition: opacity 0.5s ease 0.05s;
+  top: 122px;
 }
 
 .sidebar.active ~ .style-options-wrapper {
