--- a/app/assets/stylesheets/components/_reddit_card_list.scss
+++ b/app/assets/stylesheets/components/_reddit_card_list.scss
@@ -70,7 +70,7 @@
 .reddit-list-info-top {
     margin-bottom: 8px;
     & .subreddit-list {
-        font-size: 12px;
+        font-size: calc(var(--widget-font-size) - 6px);
     }
     & .reddit-list-thread-title {
         font-size: var(--widget-font-size);
