--- a/app/assets/stylesheets/components/_widget.scss
+++ b/app/assets/stylesheets/components/_widget.scss
@@ -1,15 +1,16 @@
 .widget-button {
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     border-radius: 50%;
-    background-color: black;
-    color: #20EFE3;
+    background-color: #3A83DD;
     position: fixed;
     bottom: 10px;
     right: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px;
+    overflow: hidden;
 }
 
 .widget-wrapper {
