update logo on widgets#index page

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -21,6 +21,11 @@
   border-right: 2px solid black;
 }
 
+.index-page-logo {
+  width: 38px;
+  height: 38px;
+}
+
 .sidebar .logo-content .logo {
   color: aliceblue;
   display: flex;
