--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,8 @@
 <div class="sidebar">
   <div class="logo-content">
     <div class="logo">
-      <i class='bx bxs-widget'></i>
+      <%# <i class='bx bxs-widget'></i> %>
+      <%= image_tag 'seal.png', alt: 'logo', class: 'index-page-logo' %>
       <div class="logo-name">Aprooft</div>
     </div>
     <i class="bx bx-menu" id="sidebar-hamburger-menu"></i>
