--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -115,11 +115,15 @@
 .submit-dev-btn {
     color: white;
     height: 50px;
-    width: 140px;
+    width: 30%;
     border-radius: 5px;
     transition: background 0.3s ease;
     background: #3a84de;
     border: none;
+}
+
+#generate-dev-btn {
+    word-wrap: break-word;
 }
 
 .submit-dev-btn:hover {
@@ -166,7 +170,7 @@
 }
 
 .plus-box:hover {
-    cursor: pointer;    
+    cursor: pointer;
     svg {
         color: black;
     }
