--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,43 +1,57 @@
 <div class="background">
 <div class="homepage-container">
-
+  <div class="flexhp">
   <i class="bx bxs-widget fa-10x coloring"></i>
   <h1 class="logo-name coloring">Aprooft</h1>
+  </div>
+  <div class="position-relative" >
+  <div class="flexhp bannertitle position-absolute" >
+  <i class="bx bxs-widget fa-10x coloring" style="color: #11101D; font-size: 21rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="true"></i>
+  <h1 class="logo-name coloring " style="font-size: 15rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="false"><strong>Aprooft</strong></h1>
+  </div>
+  </div>
 
-<div class="banner" data-aos="fade-up" data-aos-duration="500" data-aos-once="false" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/994197/pexels-photo-994197.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
-  <div class="container">
-    <h1>Bring <strong>Social Proofing</strong> to your website</h1>
-    <h2 style="color: white;">centralize and display verified reviews from all around the internet and boost your E-rep </h2>
-  <%= link_to "Start now", widgets_path, class: "btn btn-primary" %>
+<div class="banner" data-aos-easing="ease" data-aos="fade-up" data-aos-duration="500" data-aos-once="false">
+  <div class="position-relative" data-aos-easing="ease" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="500" data-aos-once="false">
+    <div class="banner2"  >
   </div>
 </div>
-  <div class="position-relative text-boxleft" data-aos="fade-right" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
+  <div class="container position-relative">
+    <div class="position-absolute bannertext1">
+        <h1 style="color: #11101D;" data-aos-easing="ease" data-aos="fade-right" data-aos-duration="500" data-aos-delay="500" data-aos-once="false">Bring <strong>Social Proofing</strong> to your website</h1>
+    </div>
+    <div class="position-absolute bannertext2">
+    <h2 style="color: #11101D;" data-aos-easing="ease" data-aos="fade-left" data-aos-duration="500" data-aos-delay="500" data-aos-once="false">centralize and display verified reviews from all around the internet and boost your E-rep </h2>
+  <%= link_to "Start now", widgets_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
+  <div class="position-relative text-boxleft" data-aos="fade-right" data-aos-duration="400" data-aos-delay="500" data-aos-once="false">
    <div class="position-absolute subtextleft">
      <h1 style="color: #11101D;">Get verified reviews from the internet to promote your products</h1>
    </div>
 </div>
    <div class="position-relative">
-    <div class="img-boxright position-absolute" data-aos="fade-left" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
+    <div class="img-boxright position-absolute" data-aos="fade-left" data-aos-duration="400" data-aos-delay="500" data-aos-once="false">
     </div>
    </div>
-     <div class="position-relative text-boxright">
+     <div class="position-relative text-boxright" data-aos="fade-left" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
    <div class="position-absolute subtextright">
      <h1 style="color: #11101D;">A highly customizable interface to match your website</h1>
    </div>
 </div>
    <div class="position-relative">
-    <div class="img-box2 position-absolute">
+    <div class="img-box2 position-absolute" data-aos="fade-right" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
     </div>
    </div>
-     <div class="position-relative text-boxleft2">
+     <div class="position-relative text-boxleft2" data-aos="fade-right" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
    <div class="position-absolute subtextleft2">
-     <h1 style="color: #11101D;">Know your customers habits better thanks too analytics</h1>
+     <h1 style="color: #11101D;">Know your customers habits better thanks to analytics</h1>
    </div>
 </div>
 <div class="position-relative">
-    <div class="img-boxright2 position-absolute">
+    <div class="img-boxright2 position-absolute" data-aos="fade-left" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
     </div>
 </div>
 </div>
-
 </div>
