--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="position-relative" >
   <div class="flexhp bannertitle position-absolute" >
-  <i class="bx bxs-widget fa-10x coloring" style="color: #11101D; font-size: 21rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="true"></i>
+  <i class="bx bxs-widget fa-10x coloring" style="color: #11101D; font-size: 21rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="false"></i>
   <h1 class="logo-name coloring " style="font-size: 15rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="false"><strong>Aprooft</strong></h1>
   </div>
   </div>
@@ -52,6 +52,9 @@
 <div class="position-relative">
     <div class="img-boxright2 position-absolute" data-aos="fade-left" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
     </div>
+</div>
+<div class="specbox" data-aos="flip-down" data-aos-duration="500" data-aos-delay="350" data-aos-once="false">
+
 </div>
 </div>
 </div>
