--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -129,6 +129,15 @@
 
 }
 
+.specbox {
+
+  background-image: url(https://i.ibb.co/4t1zMHZ/specbox.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 813px;
+  margin-top: 100px;
+}
 .img-width {
 
   width: 70%;
