basic style for analytics page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "analytics";
 @import "sidebar";
 @import "video_card_list";
 @import "video_card_grid";
