--- a/app/assets/stylesheets/components/_homepage.scss
+++ b/app/assets/stylesheets/components/_homepage.scss
@@ -131,13 +131,52 @@
 
 .specbox {
 
+  display: flex;
+  flex-wrap: wrap;
   background-image: url(https://i.ibb.co/4t1zMHZ/specbox.png);
   background-repeat: no-repeat;
   background-size: contain;
   width: 100%;
   height: 813px;
   margin-top: 100px;
+  padding: 120px;
+  padding-left: 121px;
 }
+
+
+.spec {
+
+  height: 234px;
+  width: 300px;
+  border-radius: 12px;
+  margin: 20px;
+}
+
+.spectitle {
+    display: flex;
+    align-items: flex-end;
+}
+
+.spectitle h1 {
+
+    font-weight: 600;
+    font-size: 3rem;
+    margin-left: 15px;
+}
+
+
+.spectext {
+
+color:#11101D;
+font-size: 1.8rem;
+}
+
+.specicon {
+
+    background: rgba(17, 16, 29, 1);
+    border-radius: 12px;
+}
+
 .img-width {
 
   width: 70%;
@@ -181,5 +220,8 @@
     display: flex;
     align-items: center;
 }
+
+
+
 
 
