--- a/app/assets/stylesheets/components/_analytics.scss
+++ b/app/assets/stylesheets/components/_analytics.scss
@@ -21,6 +21,10 @@
   display: flex;
   padding: 24px 24px 0 24px;
   justify-content: space-between;
+  align-items: center;
+  & h3 {
+    margin-bottom: 0;
+  }
 }
 
 .global-stats,
@@ -33,7 +37,7 @@
 
 .total-session-time-wrapper,
 .total-clicks-wrapper {
-  padding: 24px;
+  padding: 24px 32px;
 }
 
 // .session-time-chart,
@@ -76,4 +80,12 @@
   p {
     margin-right: 16px;
   }
+}
+
+#select-widget {
+  padding: 8px;
+  border-radius: 12px;
+  font-size: 24px;
+  background-color: #DBDFE2;
+  border: none;
 }
