--- a/app/views/shared/_analytics.html.erb
+++ b/app/views/shared/_analytics.html.erb
@@ -36,30 +36,40 @@
     </div>
     <div class="widget-stats-wrapper">
       <div class="session-number-wrapper">
-        <div class="widget-name">
-          <h3>Bose Noise Cancelling 700</h3>
-        </div>
-        <div class="session-number">
-          <h3>6 sessions</h3>
+        <div class="widget-select">
+          <select id="select-widget">
+            <option value="all">All</option>
+            <% @user_widgets.each do |user_widget| %>
+              <option value=<%= user_widget.product_id %>><%= user_widget.product_title %></option>
+            <% end %>
+          </select>
         </div>
       </div>
       <div class="total-session-time-wrapper">
         <div class="total-session-time">
           <p>Total time:</p>
-          <h4>00:02:00</>
+          <h4><%= @total_time %></h4>
         </div>
         <div class="session-time-chart">
-          <%= line_chart User.group_by_day(:created_at).count %>
+          <%= column_chart WidgetAccess.group_by_day(:open_at).count, ytitle: "Time per day" %>
         </div>
-
+      </div>
+      <div class="total-session-time-wrapper">
+        <div class="total-session-time">
+          <p>Total number of sessions:</p>
+          <h4><%= @widget_sessions %> sessions</h4>
+        </div>
+        <div class="session-time-chart">
+          <%= area_chart WidgetAccess.group_by_day(:open_at).count, ytitle: "Number of Sessions" %>
+        </div>
       </div>
       <div class="total-clicks-wrapper">
         <div class="total-clicks">
           <p>Total clicks:</p>
-          <h4>6 clicks</h4>
+          <h4><%= @widget_clicks %> clicks</h4>
         </div>
         <div class="clicks-chart">
-          <%= line_chart User.group_by_day(:created_at).count %>
+          <%= area_chart ContentAccess.group_by_day(:click_at).count, ytitle: "Number of Clicks" %>
         </div>
       </div>
     </div>
