--- a/app/views/widgets/_products_index.html.erb
+++ b/app/views/widgets/_products_index.html.erb
@@ -18,7 +18,13 @@
     <div class="your-products-title">
       <h1> Your products</h1>
       <%= link_to new_widget_url do %>
-        <img src="https://img.icons8.com/ios-glyphs/28/ffffff/plus-math.png"/>
+        <div class="add-product">
+          <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10"></circle>
+            <line x1="12" y1="8" x2="12" y2="16"></line>
+            <line x1="8" y1="12" x2="16" y2="12"></line>
+          </svg>
+        </div>
       <% end %>
     </div>
     <div class="widgets-all-list">
