kinda fixed the animations and everything wrong

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "components/form-container";
 @import "components/button";
 @import "components/homepage";
+@import "components/footer";
 @import "pages/index";
 @import "widgets/index";
 
