--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="background">
 <div class="homepage-container">
-  <div class="flexhp">
+  <div class="flexhp" data-aos="fade-right" data-aos-duration="400" data-aos-delay="500" data-aos-once="false">
   <i class="bx bxs-widget fa-10x coloring"></i>
   <h1 class="logo-name coloring">Aprooft</h1>
   </div>
@@ -11,17 +11,17 @@
   </div>
   </div>
 
-<div class="banner" data-aos-easing="ease" data-aos="fade-up" data-aos-duration="500" data-aos-once="false">
+<div class="banner" data-aos-easing="ease" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
   <div class="position-relative" data-aos-easing="ease" data-aos="fade-down-left" data-aos-duration="1000" data-aos-delay="500" data-aos-once="false">
     <div class="banner2"  >
   </div>
 </div>
   <div class="container position-relative">
     <div class="position-absolute bannertext1">
-        <h1 style="color: #11101D;" data-aos-easing="ease" data-aos="fade-right" data-aos-duration="500" data-aos-delay="500" data-aos-once="false">Bring <strong>Social Proofing</strong> to your website</h1>
+        <h1 style="color: #11101D;" data-aos-easing="ease" data-aos="fade-right" data-aos-duration="500" data-aos-delay="500" data-aos-once="true">Bring <strong>Social Proofing</strong> to your website</h1>
     </div>
     <div class="position-absolute bannertext2">
-    <h2 style="color: #11101D;" data-aos-easing="ease" data-aos="fade-left" data-aos-duration="500" data-aos-delay="500" data-aos-once="false">centralize and display verified reviews from all around the internet and boost your E-rep </h2>
+    <h2 style="color: #11101D;" data-aos-easing="ease" data-aos="fade-left" data-aos-duration="500" data-aos-delay="500" data-aos-once="true">centralize and display verified reviews from all around the internet and boost your E-rep </h2>
   <%= link_to "Start now", widgets_path, class: "btn btn-primary" %>
     </div>
   </div>
@@ -128,5 +128,17 @@
        <h2 class="spectext">Get valuable informations on your customers' habits</h2>
       </div>
 </div>
+</div>
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    Made with <i class="fas fa-heart"></i> by team Aprooft
+  </div>
 </div>
 </div>
