comment out the shadow on product card

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,7 +7,7 @@
   width: 300px;
   border-radius: 12px;
   background-color: white;
-  box-shadow: 5px 7px 15px 6px rgba(0,0,0,0.2);
+  // box-shadow: 5px 7px 15px 6px rgba(0,0,0,0.2);
   margin: 20px;
   cursor: pointer;
 }
@@ -46,7 +46,7 @@
   /*customizable*/
   transition: 0.2s ease-out;
   transform: translateY(-8px);
-  box-shadow: 5px 7px 15px 6px rgba(0,0,0,0.4);
+  // box-shadow: 5px 7px 15px 6px rgba(0,0,0,0.4);
 }
 
 
